board for roulette works

--- a/src/styles/FieldOnBoard.css
+++ b/src/styles/FieldOnBoard.css
@@ -25,7 +25,8 @@
   transform: rotate(90deg); */
 }
 .black {
-  /* background-color: black;
+  background-color: black;
+  /*
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -o-transform: rotate(90deg);
