--- a/src/styles/NumOfSets.css
+++ b/src/styles/NumOfSets.css
@@ -17,6 +17,7 @@
 }
 
 .green {
+  min-width:100%;
   margin-left: auto;
   margin-right: auto;
   align-items: center;
@@ -28,4 +29,5 @@
 .black,
 .green {
   border: 1px solid white;
+  color:white;
 }
